--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,3 @@
 [conf]
 save_pth = .\download_1
-usernames = _qxxry._,seaerr__,ivy_lin_0110,hahahaleopard,_mumuuu__
+usernames = username_1,username_2,username_3
